--- a/templates/default.less
+++ b/templates/default.less
@@ -2,24 +2,110 @@
 @color-fill-white: #fff;
 @color-text-black: #000;
 @color-text-white: #fff;
+@color-primary: #63ace5;
+@color-secondary: #207CC2;
+
+@spacing: 10px;
+@font-size: 15px;
+
+@card-width: 150px;
+@footer-height: 42px;
+
+@breakpoint-lg: 5 * @card-width + 12 * @spacing;
+@breakpoint-sm: 2 * @card-width + 6 * @spacing;
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
 
 body {
     background-color: #ccc;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    font-size: @font-size;
+    width: 100vw;
+    overflow-x: hidden;
+
+    position: relative;
+    height: 100%;
+
 }
 
 * {
     box-sizing: border-box;
 }
 
-main {
-    max-width: 1200px;
+.wrapper {
+    max-width: @breakpoint-lg;
     margin: 0 auto;
+}
+
+header,
+main {
+    padding: @spacing*2;
 }
 
 header {
     text-align: center;
+
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    background: inherit;
+
+    &.stuck {
+        box-shadow: 10px 0 10px rgba(0,0,0,0.5);
+    }
+}
+
+main {
+    padding-bottom: @footer-height + @spacing * 2;
+}
+
+footer {
+    display: none;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    height: @footer-height;
+    line-height: @footer-height;
+    background: fadeout(@color-primary, 10%);
+
+    &.ready {
+        display: block;
+    }
+
+    .wrapper {
+        padding: 0 @spacing*2;
+        text-align: right;
+    }
+
+    .button {
+        padding: 0 10px;
+        background: @color-secondary;
+        line-height:30px;
+        display: inline-block;
+        border-radius: 5px;
+        border: 1px solid darken(@color-secondary, 10%);
+        cursor: pointer;
+
+        transition: background 0.2s ease-in-out;
+
+        &:hover {
+            background: darken(@color-secondary, 10%);
+        }
+    }
+}
+
+.cards.ia {
+
+    a.card:not(.selected):hover {
+        transform: scale(1.1);
+        box-shadow: 0 0 @spacing*2 #000;
+        z-index: 2;
+    }
 }
 
 .card {
@@ -30,26 +116,40 @@ header {
 
     width: 150px;
     height: 210px;
-    padding: 15px;
+    padding: @spacing;
 
-    border-radius: 10px;
-    font-size: 15px;
+    border-radius: @spacing;
     line-height: 120%;
     text-align: left;
 
-    transition: transform 0.1s ease-in-out;
+    position: relative;
+
+    user-select: none;
+
+    box-shadow: 0 0 2px rgba(0,0,0,0.4);
+    transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 
     &.black {
         background-color: @color-fill-black;
         color: @color-text-white;
     }
 
-    &:not(.selected):hover {
-        transform: scale(1.1);
+    &.selected {
+        border: 3px solid #63ace5;
+        padding: @spacing - 3px;
     }
 
-    &.selected {
-        border: 2px solid blue;
+    &[data-pick]:after {
+        position: absolute;
+        right: @spacing;
+        bottom: @spacing;
+        border-radius: 50%;
+        background-color: #63ace5;
+        color: #fff;
+        text-align: center;
+        line-height: 22px;
+        width: 22px;
+        content: attr(data-pick);
     }
 
     span {
@@ -63,10 +163,30 @@ ul {
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
-    margin: 10px -10px;
+    margin: -@spacing;
 }
 
 li {
-    padding: 10px;
+    padding: @spacing;
+}
+
+.centered {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: @breakpoint-lg) {
+    .wrapper {
+        max-width: @breakpoint-sm;
+    }
+    .card {
+        min-height: 75px;
+        height: 100%;
+    }
 }
