--- a/templates/default.less
+++ b/templates/default.less
@@ -24,12 +24,12 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: @font-size;
-    width: 100vw;
-    overflow-x: hidden;
 
     position: relative;
-    height: 100%;
-
+    width: 100vw;
+    height: auto;
+    min-height: 100%;
+    overflow-x: hidden;
 }
 
 * {
@@ -59,10 +59,6 @@ header {
     }
 }
 
-main {
-    padding-bottom: @footer-height + @spacing * 2;
-}
-
 footer {
     display: none;
     position: fixed;
@@ -72,6 +68,7 @@ footer {
     height: @footer-height;
     line-height: @footer-height;
     background: fadeout(@color-primary, 10%);
+    z-index: 5;
 
     &.ready {
         display: block;
@@ -173,15 +170,14 @@ li {
 }
 
 .centered {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
 
-@media (max-width: @breakpoint-lg) {
+
+@media (max-width: @breakpoint-lg), (max-height: 480px) {
     .wrapper {
         max-width: @breakpoint-sm;
     }
