--- a/templates/default.less
+++ b/templates/default.less
@@ -99,31 +99,30 @@ footer {
             display: none;
         }
     }
+}
 
-    .button {
-        padding: 0 10px;
-        background: @color-secondary;
-        line-height:30px;
-        border-radius: @card-radius;
-        border: 1px solid darken(@color-secondary, 10%);
-        cursor: pointer;
-        color: #fff;
-        text-decoration: none;
-        text-align: center;
+.button {
+    display: inline-block;
+    padding: 0 10px;
+    background: @color-secondary;
+    line-height:30px;
+    border-radius: @card-radius;
+    border: 1px solid darken(@color-secondary, 10%);
+    cursor: pointer;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
 
-        width: @card-width - @spacing*2;
+    width: @card-width - @spacing*2;
 
-        transition: background 0.2s ease-in-out;
+    transition: background 0.2s ease-in-out;
 
-        &:hover {
-            background: darken(@color-secondary, 10%);
-        }
+    &:hover {
+        background: darken(@color-secondary, 10%);
     }
 }
 
 ul.cards {
-    padding: 0;
-    list-style-type: none;
 
     display: flex;
     flex-wrap: wrap;
@@ -136,11 +135,30 @@ ul.cards {
     }
 }
 .cards.ia {
+    .card {
+        &.selected {
+            border: 3px solid #63ace5;
+            padding: @spacing - 3px;
+        }
 
-    a.card:not(.selected):hover {
-        transform: scale(1.1);
-        box-shadow: 0 0 @spacing*2 #000;
-        z-index: 2;
+        &:not(.selected):hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 @spacing*2 #000;
+            z-index: 2;
+        }
+
+        &[data-pick]:after {
+            position: absolute;
+            right: @spacing;
+            bottom: @spacing;
+            border-radius: 50%;
+            background-color: #63ace5;
+            color: #fff;
+            text-align: center;
+            line-height: 22px;
+            width: 22px;
+            content: attr(data-pick);
+        }
     }
 }
 
@@ -170,32 +188,16 @@ ul.cards {
         color: @color-text-white;
     }
 
-    &.selected {
-        border: 3px solid #63ace5;
-        padding: @spacing - 3px;
-    }
-
-    &[data-pick]:after {
-        position: absolute;
-        right: @spacing;
-        bottom: @spacing;
-        border-radius: 50%;
-        background-color: #63ace5;
-        color: #fff;
-        text-align: center;
-        line-height: 22px;
-        width: 22px;
-        content: attr(data-pick);
-    }
-
     span {
         white-space: nowrap;
     }
 }
 
 ul {
-    margin: @spacing 0;
+    margin: 0;
     line-height: 150%;
+    padding: 0;
+    list-style-type: none;
 }
 
 .centered {
@@ -205,6 +207,42 @@ ul {
     transform: translate(-50%,-50%);
 }
 
+.main-carousel
+{
+    padding: @spacing;
+    .carousel-cell {
+        width: 240px;
+        text-align: center;
+        transform: scale(0.9);
+        transition: transform 0.5s ease-in-out;
+        padding: 20px;
+    }
+    .carousel-cell.is-selected {
+        transform: scale(1.0);
+    }
+
+    .player-picks {
+        background: #fff;
+        padding-bottom: @spacing*2;
+
+        h1 {
+            background: @color-primary;
+            margin: 0 0 @spacing*2;
+            padding: @spacing*2 0;
+            display: block;
+        }
+    }
+
+    .action {
+        margin-top: @spacing*2;
+        background: @color-primary;
+        padding: @spacing 0;
+    }
+
+    .shadow {
+        box-shadow: 0 0 @spacing rgba(0,0,0,0.5);
+    }
+}
 
 @media (max-width: @breakpoint-lg), (max-height: 480px) {
     .wrapper {
